# dpdk-custom

drivers/bus/vdev/: vdev.c
drivers/net/: meson.build
drivers/net/vhost/: rte_eth_vhost.c
drivers/net/zcio/: fd_man.c  fd_man.h  meson.build  utils.c  utils.h  zcio.c  zcio.h
lib/eal/common/: eal_common_options.c
lib/eal/include/: rte_dev.h  rte_fbarray.h
lib/eal/linux/: eal_memalloc.c
